--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Crafty+Girls&family=Mountains+of+Christmas:wght@400;700&display=swap');
 .App {
   text-align: center;
 }
+.mountains-of christmas-regular {
+  font-family: 'Mountains of Christmas', serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.mountains-of christmas-bold {
+  font-family: 'Mountains of Christmas', serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 body {
   background-color: #61dafb;
 }
