--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  .crafty-girls-regular {
+    font-family: 'Crafty Girls', cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
 }
